fixing home hero alignment

--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -10,7 +10,7 @@
         }
 
         position: absolute;
-        bottom: 17px;
+        bottom: 13px;
         left: 335px;
         display: none;
         max-width: 615px;
